--- a/learning.html
+++ b/learning.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container body">
         <div class="header">
-            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia illo illum autem quibusdam sit! Nulla eius tenetur assumenda accusamus aperiam.</h1>
+            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia illo illum autem quibusdamgit sit! Nulla eius tenetur assumenda accusamus aperiam.</h1>
 
         </div>
         <div class="section">
